Modifications et changement de version de Django > 3.1.9

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,7 @@ SECRET_KEY = "Clé secrète très secrète"
 DATABASE_NAME = "dbcyberparlement"
 DATABASE_USER = "root"
 DATABASE_PASSWORD = ""
+DATABASE_PORT = ""
+DATABASE_HOST = ""
 TEST_DATABASE_NAME = "dbcyberparlement"
 ALLOWED_HOSTS = [".cyberparlement.net","cyberparlement"]
