--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,11 @@ blessed==1.18.0
 certifi==2020.12.5
 cffi==1.14.5
 channels==3.0.3
-chardet==4.0.0
 constantly==15.1.0
 croniter==1.0.8
 cryptography==3.4.6
 daphne==3.0.1
-Django==3.1.7
+Django==3.1.9
 django-bootstrap-datepicker-plus==3.0.5
 django-picklefield==3.0.1
 django-q==1.3.5
@@ -25,6 +24,8 @@ incremental==21.3.0
 jinxed==1.0.1
 mysqlclient==2.0.3
 natsort==7.1.1
+numpy==1.20.3
+pandas==1.2.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
@@ -38,8 +39,5 @@ sqlparse==0.4.1
 Twisted==21.2.0
 twisted-iocpsupport==1.0.1
 txaio==21.2.1
-urllib3==1.26.3
 wcwidth==0.2.5
 zope.interface==5.2.0
-
-pandas~=1.2.4
